--- a/lab_4/pubspec.yaml
+++ b/lab_4/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   uni_links: ^0.5.1
   fluttertoast: ^8.0.8
   google_fonts:
+  location: ^4.4.0
+  share: ^2.0.4
 
 dev_dependencies:
   flutter_test:
