Implementacion del mapa

--- a/lab_4/android/app/src/main/AndroidManifest.xml
+++ b/lab_4/android/app/src/main/AndroidManifest.xml
@@ -5,6 +5,8 @@
         android:label="gruaapp"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
+        <meta-data android:name="com.google.android.geo.API_KEY"
+               android:value="AIzaSyDdMYki7gep64YCRe5vqgnQuNHib6EsbH4"/>
         <activity
             android:name=".MainActivity"
             android:exported="true"
